# ACT

./: .buildinfo  .gitconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  api.html  bursterIzh_seg.ipynb  bursterIzh_seg_test.ipynb  bursterS3_seg.ipynb  burster_seg.ipynb  config.json  current_segmentation.ipynb  download_build_from_allendb.ipynb  example_data.csv  experiments.ipynb  genindex.html  intro.html  labinstall.sh  markdown.html  notebooks.html  objects.inv  pass_orig.ipynb  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  segregation.ipynb  segregation_new.ipynb  segregation_old.ipynb  setup.py  spiker_orig.ipynb  spiker_seg.ipynb  test.ipynb  test_act.ipynb  test_act_seg.ipynb  test_actmod_orig.ipynb  test_actmod_seg.ipynb  test_bmtools.py  (+4 more)
_modules/: index.html
_sources/: intro.md
act/: ACTModule.py  ACTOptimizer.py  ACTPlot.py  DataProcessor.py  DataProcessor_old.py  Metrics.py  PassiveProperties.py  PassivePropertiesModule.py  RandomForestOptimizer  RandomForestOptimizer.py  SyntheticGenerator.py  TCNNOptimizer.py  __init__.py  act_module.py  act_plot.py  act_types.py  analysis.py  builder.py  cell.py  cell_model.py  data_processing.py  feature_model.py  logger.py  metrics.py  models.py  modfiles.py  module.py  optim.py  optimizer.py  passive.py  segmentation.py  segregation.py  simulator.py  target_utils.py  tuner.py  types.py  utils.py  zoo.py
api/: main.html
docs/: _config.yml  _toc.yml  api.md  intro.md
experiments/: current_segmentation.ipynb  experiments.ipynb  paper_plots.ipynb  recalc_metrics.ipynb
(+2222 files in other folders)
