[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "act-neuron"
version = "0.1.9"
description = "Automatic Cell Tuner"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "h5py",
    "NEURON>=8.2.0",
    "numpy",
    "matplotlib",
    "torch",
    "pandas",
    "timeout_decorator",
    "statsmodels",
]
