[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["act"]

[project]
name = "act-neuron"
version = "0.2.0"
description = "Automatic Cell Tuner"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "h5py",
    "NEURON>=8.2.0",
    "numpy",
    "matplotlib",
    "torch",
    "pandas",
    "timeout_decorator",
    "statsmodels",
    "scikit-learn",
    "tqdm",
    "plotly"
]
