[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["act"]

[project]
name = "act"
version = "1.0.0"
description = "Automatic Cell Tuner"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "NEURON>=8.2.0",
    "numpy",
    "scipy",
    "pandas",
    "timeout_decorator",
    "scikit-learn"
]
